# TrueDirectionalMovement

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/: FUNDING.yml
.github/workflows/: build-variant.yml  main.yml
cmake/: headerlist.cmake  packaging.cmake  sourcelist.cmake
powershell/: build-all.ps1  build-current.ps1
scripts/source/: TrueDirectionalMovement.psc  TrueDirectionalMovement_MCM.psc
src/: CMakeLists.txt  DirectionalMovementHandler.cpp  DirectionalMovementHandler.h  Events.cpp  Events.h  Hooks.cpp  Hooks.h  ModAPI.cpp  ModAPI.h  Offsets.h  PCH.h  Papyrus.cpp  Papyrus.h  Raycast.cpp  Raycast.h  Settings.cpp  Settings.h  SmoothCamAPI.h  TrueDirectionalMovementAPI.h  TrueHUDAPI.h  Utils.cpp  Utils.h  ViewHandler.cpp  ViewHandler.h  WidgetHandler.cpp  WidgetHandler.h  main.cpp
src/API/: APIManager.cpp  APIManager.h  DodgeFrameworkAPI.h
src/Scaleform/: BossMenu.cpp  BossMenu.h  Scaleform.cpp  Scaleform.h  TargetLockMenu.cpp  TargetLockMenu.h
src/Widgets/: TargetLockReticle.cpp  TargetLockReticle.h
swf/: TDM_Assets0.fla  TDM_Boss.fla  TDM_Boss.swf  TDM_Splash.fla  TDM_Splash.swf  TDM_TargetLock.fla  TDM_TargetLock.swf  TDM_Widgets.fla
swf/Boss/: BossBar.as  BossList.as
swf/TargetLock/: Reticle.as  TargetBar.as
swf/Widgets/: TDM_TargetLockReticle.as
translation/: TrueDirectionalMovement_english.txt  TrueDirectionalMovement_japanese.txt  copy.ps1
